# ChangeLog for media-libs/win32codecs
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/win32codecs/ChangeLog,v 1.19 2005/01/16 20:13:59 luckyduck Exp $

  16 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org>
  win32codecs-20040916-r1.ebuild:
  added ~amd64 to KEYWORDS. fixes bug #78159

  19 Dec 2004; Chris White <chriswhite@gentoo.org>
  win32codecs-20040916-r1.ebuild:
  Marked stable to prepare for mplayer security marking.

*win32codecs-20040916-r1 (26 Oct 2004)

  26 Oct 2004; Patrick Kursawe <phosphan@gentoo.org>
  +win32codecs-20040916-r1.ebuild:
  Fixing bug #68962

  23 Oct 2004; Chris White <chriswhite@gentoo.org>
  win32codecs-20040916.ebuild:
  Quicktime needs to actually be in /usr/lib/win32 for MPlayer to see it so,
  back there it goes.

  23 Oct 2004; Chris White <chriswhite@gentoo.org>
  win32codecs-20040916.ebuild:
  Fixed installation logic and gave real/quicktime seperate install folders.

*win32codecs-20040916 (23 Oct 2004)

  23 Oct 2004; Chris White <chriswhite@gentoo.org>
  +win32codecs-20040916.ebuild:
  bumped to 20040916 which uses 1 tarball instead of 3. real and xanim USE flags
  added onto the existing quicktime USE flag.

*win32codecs-20040703 (14 Aug 2004)

  14 Aug 2004; Chris White <chriswhite@gentoo.org>
  +win32codecs-20040703.ebuild:
  Bumped to 20040703.  Closes bug #60120.

*win32codecs-20040427 (24 Jun 2004)

  24 Jun 2004; Martin Holzer <mholzer@gentoo.org> win32codecs-20040427.ebuild:
  Version bumped. Closes 50420

  20 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org>
  win32codecs-0.90.1-r1.ebuild:
  set -ppc

*win32codecs-20031001 (01 Oct 2003)

  01 Oct 2003; Patrick Kursawe <phosphan@gentoo.org>
  win32codecs-20031001.ebuild:
  In response to bug 29972, the files are renamed with a date-based version
  number and brought manually to the distfiles mirrors. The dmocodecs package
  was removed, this seems to be in win32codecs.tar.bz2 now.
